PR comment: handle duplicates